<resources>
    <string name="app_name">AutoTAG</string>
    <string name="authorizeText">A new user has requested access:</string>
    <string name="confirm">Confirm</string>
    <string name="userid">UserID:</string>
    <string name="deny">Deny</string>
    <string name="displayText">Access has been requested by a registered user:</string>
    <string name="ok">OK</string>
    <string name="start">Welcome to AutoTAG!</string>
    <string name="checkbox_text">Item Text</string>
</resources>
