<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp90018.autotag.authorizeNotification">

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="95dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/dismissButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/dismiss"
        app:layout_constraintLeft_toRightOf="@+id/confirmButton"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="479dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/authorizeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:text="@string/authorizeText"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/authorizeUserID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/userid"
            android:textAlignment="center"
            android:textSize="14sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

